Java17 support (#14700)