@@ -11,7 +11,7 @@ version := "6.2.0-dev2"
 (ThisBuild / scalaVersion) := scalaVer
 
 //(ThisBuild / scalacOptions) += "-target:11"
-(ThisBuild / javacOptions) ++= Seq("-source", "11", "-target", "11")
+(ThisBuild / javacOptions) ++= Seq("-source", "17", "-target", "17")
 
 (ThisBuild / javaOptions) += "-Xmx4096m"
 (ThisBuild / javaOptions) += "-XX:+UseG1GC"
@@ -183,11 +183,22 @@ inConfig(SlowTest)(Defaults.testTasks)
 /** Enable for debugging */
 (Test / testOptions) += Tests.Argument("-oF")
 
+Test / javaOptions ++= Seq(
+  "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-opens=java.base/java.nio=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED",
+  "--add-opens=java.base/java.io=ALL-UNNAMED",
+  "--add-opens=java.base/sun.security=ALL-UNNAMED",
+  "--add-opens=java.base/sun.security.action=ALL-UNNAMED"
+)
+
 /** Disables tests in assembly */
 (assembly / test) := {}
 
 /** Publish test artifact * */
 (Test / publishArtifact) := true
+Test / fork := true
 
 /** Copies the assembled jar to the pyspark/lib dir * */
 lazy val copyAssembledJar = taskKey[Unit]("Copy assembled jar to python/lib")
